--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <section id="second paragraph">
        <p> My name is Ishrah </p>
       </section>
+    
     <section>
        <p> my name is Ishrah </p>  
-       <img src="images/flower.jpg" alt="cat" title="pink flower">
+    <img src="images/blommor.jpg" alt="blommor" title="rosa blommor">
     </section>
 </main>
 <footer>
